# gRPC_HelloWorld_cpp

./: CMakeLists.txt  README.md
protos/: bidirectional.proto  oneway.proto
src/: bidirectional_client.cc  bidirectional_server.cc  client.cc  oneway_client.cc  oneway_server.cc  server.cc
